--- a/chanchu.html
+++ b/chanchu.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>金桔抽卡 - ZM男团非官方网站</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" href="zhuye.css">
     <style>
         /* 产出合集页面特有样式 */
         /* 瀑布流布局 */
@@ -345,4 +345,5 @@
         });
     </script>
 </body>
+
 </html>
