--- a/richang.html
+++ b/richang.html
@@ -334,7 +334,7 @@
             const homeLink = document.getElementById('homeLink');
             if (homeLink) {
                 homeLink.addEventListener('click', function() {
-                    window.location.href = 'class1.html';
+                    window.location.href = 'index.html';
                 });
             }
             
@@ -363,4 +363,5 @@
     </script>
 </body>
 </html>
+
 
